rules.v4
# Generated by iptables-save v1.8.7 on Mon Feb 27 09:23:10 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [88:7148]
:DOCKER-USER - [0:0]
-A INPUT -s 10.0.0.0/8 -j DROP
-A INPUT -s 169.254.0.0/16 -j DROP
-A INPUT -s 172.16.0.0/12 -j DROP
-A INPUT -s 127.0.0.0/8 -i eth0 -j DROP
-A INPUT -s 224.0.0.0/4 -j DROP
-A INPUT -d 224.0.0.0/4 -j DROP
-A INPUT -s 240.0.0.0/5 -j DROP
-A INPUT -d 240.0.0.0/5 -j DROP
-A INPUT -s 0.0.0.0/8 -j DROP
-A INPUT -d 0.0.0.0/8 -j DROP
-A INPUT -d 239.255.255.0/24 -j DROP
-A INPUT -d 255.255.255.255/32 -j DROP
-A INPUT -m state --state INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -j DROP
-A INPUT -s 91.203.226.0/24 -i ens3 -j ACCEPT
-A INPUT -i ens3 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -i ens3 -p tcp -m tcp --dport 51622 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -j DROP
-A FORWARD -j DROP
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-USER -s 91.203.226.0/24 -i ens3 -p tcp -m conntrack --ctorigdstport 51821 --ctdir ORIGINAL -j ACCEPT
-A DOCKER-USER -s 195.98.77.182/32 -i ens3 -p tcp -m conntrack --ctorigdstport 51821 --ctdir ORIGINAL -j ACCEPT
-A DOCKER-USER -s 217.25.229.15/32 -i ens3 -p tcp -m conntrack --ctorigdstport 51821 --ctdir ORIGINAL -j ACCEPT
-A DOCKER-USER -i ens3 -p tcp -m conntrack --ctorigdstport 51821 --ctdir ORIGINAL -j DROP
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Mon Feb 27 09:23:10 2023
# Generated by iptables-save v1.8.7 on Mon Feb 27 09:23:10 2023
*nat
:PREROUTING ACCEPT [508:23913]
:INPUT ACCEPT [153:7933]
:OUTPUT ACCEPT [84:6808]
:POSTROUTING ACCEPT [155:10478]
COMMIT
# Completed on Mon Feb 27 09:23:10 2023
